commented the code and added milestone-2.md

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <img src="images/Dulari Cafe.jpg" class="image">
       <span class="name">Dulari Cafe House</span> <br><br>
       <input type="image" src="images/upvote.png" id="upvote" class="review"> <span id="upvote-count">15</span> &ensp;
-      <input type="image" src="images/downvote.png" id="downvote" class="review"> <span id="downvote-count">12</span> <br>
+      <input type="image" src="images/downvote.png" id="downvote" class="review"> <span id="downvote-count">12</span>
+      <br>
       Service Options: Dine-in | Drive-thru | Delivery
       <hr>
       <strong>Address: </strong> College, Yewalewadi, Pune, Maharashtra 411048 <br>
